brat/test/golden/error/kbadvec4.brat.golden
Error in test/golden/error/kbadvec4.brat@2:7-12
f = { [1,2] => true }
      ^^^^^

  Type error: Expected something of type `Bool` but got `1`

